# BlogStraka

./: .pre-commit-config.yaml  README.md
AntiVirusSimple/: ScanAndDelete.cpp  kill48KB.cpp  安全卫士killer.bat
ArduinoNrf24l01/: RF24.cpp  RF24.h  nRF24L01.h
ArduinoNrf24l01/arduino-receive/: arduino-receive.ino
ArduinoNrf24l01/arduino-send/: arduino-send.ino
CalcDateInterval/: CalcDateInterval.cpp
CrawLianJia/: README.md  getProxy.py
CrawlLianJian/: crawlLianJia.py
CrossCompileDlibForRaspberrypi/: autorebuild.sh  pi.cmake
CryptoStream/: CMakeLists.txt  CryptoStream.cpp  CryptoStream.h  MemStream.cpp  MemStream.h  WjCryptLib_Aes.cpp  WjCryptLib_Aes.h  WjCryptLib_AesOfb.cpp  WjCryptLib_AesOfb.h  main.cpp
DCLP/: dclp.cc  dclp.h  main.cc
ESP8266_NONOS_SDK-2.2.1-WebServer/include/: FlashParam.h  GlobalInfo.h  TCPComm.h  UserIO.h  WebServer.h  WifiManager.h  user_config.h
ESP8266_NONOS_SDK-2.2.1-WebServer/user/: FlashParam.c  TCPComm.c  UserIO.c  UserMain.c  WebServer.c  WifiManager.c
ESP8266_NONOS_SDK-2.2.1-templates/ld/: eagle.app.v6.ld
GDIDemo/: GDIDemo.sln
GDIDemo/GDIDemo/: DrawMethod.cpp  DrawMethod.h  GDIDemo.cpp  GDIDemo.h  GDIDemo.rc  (+6 more)
PixelBird/: pixelBird.sln
RussianBrick/: RussianBrick.sln
Snake/: Snake.cpp  Snake.dsp  Snake.h  Snake.rc  Snake.sln  SnakeMain.cpp  resource.h
USBCameraDemo/: USBCameraDemo.sln
WechatSubscriptionServ/: AutoWeatherServer.py  basic.py  getweather.py  handle.py  info.txt  main.py  receive.py  reply.py  sysinfo.txt  syslog.txt  user.py  user.txt  weather.txt
scm/: clang_format.hook  cpplint.hook  yapf.hook
(+36 files in other folders)
